--- a/.config
+++ b/.config
@@ -4798,7 +4798,7 @@ CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ddns-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-dnsfilter-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-dnsfilter-zh_Hans is not set
+CONFIG_PACKAGE_luci-i18n-dnsfilter-zh_Hans=y
 CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-ca is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-cs is not set
